[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Hajskor.gd" type="Script" id=1]
[ext_resource path="res://resources/sounds/gui/btn_cancel_NFF-home-switch-off.wav" type="AudioStream" id=4]
[ext_resource path="res://resources/FontFullLarge.tres" type="DynamicFont" id=8]
[ext_resource path="res://gravity_rocks_theme.tres" type="Theme" id=9]
[ext_resource path="res://resources/FontHS.tres" type="DynamicFont" id=10]
[ext_resource path="res://resources/gui_arrow.tres" type="Texture" id=11]

[node name="lestvica" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ 882.0, 640.0 ]
}

[node name="prvi" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 368.0
margin_top = 220.0
margin_right = 912.0
margin_bottom = 264.0
grow_horizontal = 2
theme = ExtResource( 9 )
custom_fonts/font = ExtResource( 10 )
text = "1. 34 rocks destroyed"
align = 1

[node name="drugi" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 379.5
margin_top = 284.0
margin_right = 903.5
margin_bottom = 328.0
grow_horizontal = 2
theme = ExtResource( 9 )
custom_fonts/font = ExtResource( 10 )
text = "2. 24 rocks destroyed"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tretji" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 379.5
margin_top = 348.0
margin_right = 903.5
margin_bottom = 392.0
grow_horizontal = 2
theme = ExtResource( 9 )
custom_fonts/font = ExtResource( 10 )
text = "3. 24 rocks destroyed"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cetrti" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 393.5
margin_top = 412.0
margin_right = 889.5
margin_bottom = 456.0
grow_horizontal = 2
theme = ExtResource( 9 )
custom_fonts/font = ExtResource( 10 )
text = "4. 4 rocks destroyed"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="peti" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 393.5
margin_top = 476.0
margin_right = 889.5
margin_bottom = 520.0
grow_horizontal = 2
theme = ExtResource( 9 )
custom_fonts/font = ExtResource( 10 )
text = "5. 4 rocks destroyed"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="prvihpet" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 459.0
margin_top = 66.0
margin_right = 822.0
margin_bottom = 188.0
theme = ExtResource( 9 )
custom_fonts/font = ExtResource( 8 )
text = "TOP 5"
align = 1

[node name="BtnContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 517.0
margin_top = 606.0
margin_right = 763.0
margin_bottom = 645.0
grow_horizontal = 2
mouse_default_cursor_shape = 2
custom_constants/separation = 16

[node name="Icon" type="TextureRect" parent="BtnContainer"]
visible = false
margin_top = 9.0
margin_right = 12.0
margin_bottom = 29.0
rect_min_size = Vector2( 0, 20 )
focus_neighbour_top = NodePath("../../BtnContainer2/HighscoresBtn")
focus_neighbour_bottom = NodePath("../../BtnContainer2/HighscoresBtn")
size_flags_vertical = 4
theme = ExtResource( 9 )
texture = ExtResource( 11 )
flip_h = true

[node name="BackBtn" type="Button" parent="BtnContainer"]
margin_top = 3.0
margin_right = 246.0
margin_bottom = 36.0
focus_neighbour_top = NodePath("../../BtnContainer3/ExitBtn")
focus_neighbour_bottom = NodePath("../../BtnContainer2/HighscoresBtn")
mouse_default_cursor_shape = 2
size_flags_vertical = 4
theme = ExtResource( 9 )
text = "BACK TO MENU"
align = 0

[node name="nazaj" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0

[connection signal="button_down" from="BtnContainer/BackBtn" to="." method="_on_BackBtn_button_down"]
[connection signal="focus_entered" from="BtnContainer/BackBtn" to="." method="_on_BackBtn_focus_entered"]
[connection signal="focus_exited" from="BtnContainer/BackBtn" to="." method="_on_BackBtn_focus_exited"]
[connection signal="mouse_entered" from="BtnContainer/BackBtn" to="." method="_on_BackBtn_mouse_entered"]
